# turfzone-revamp

./: .env.example  Cargo.toml  README.md  UMBRAL_FRICTION_LOG.md
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  FRONTEND_AUTH_SPEC.md  INVARIANTS.md
migrations/admin/: 0001_auto.json
migrations/app/: 0001_auto.json
migrations/auth/: 0001_auto.json
migrations/oauth/: 0001_create_oauth_social_account.json
migrations/permissions/: 0001_auto.json  0002_create_permissions_objectpermission.json
migrations/sessions/: 0001_create_session.json
migrations/tasks/: 0001_auto.json  0002_add_index_task_row_status_run_at.json
postman/: Turfzone API.postman_collection.json
src/: api.rs  authz.rs  lib.rs  mailer.rs  main.rs  models.rs  paystack.rs  settings.rs
src/services/: availability.rs  booking.rs  mod.rs  notification.rs  payment.rs  payout.rs  wallet.rs
