[package]
name = "turfzone"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
hmac = "0.12"
http = "1"
rust_decimal = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "chrono", "uuid", "json"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
umbral = "0.0.6"
umbral-admin = "0.0.6"
umbral-auth = "0.0.6"   
umbral-cli = "0.0.6"
umbral-health = "0.0.6"
umbral-openapi = "0.0.6"
umbral-permissions = "0.0.6"
umbral-rest = "0.0.6"
umbral-security = "0.0.6"
umbral-sessions = "0.0.6"
umbral-storage = "0.0.6"
umbral-tasks = "0.0.6"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
pretty_assertions = "1"
